# vzglyd-native

./: .gitignore  Cargo.toml  README.md  build.rs
information-slide/: Cargo.toml  manifest.json
information-slide/src/: lib.rs
loading-slide/: Cargo.toml  manifest.json
loading-slide/assets/: world.glb
loading-slide/src/: lib.rs
shaders/: default_screen.wgsl  default_world.wgsl  overlay.wgsl
src/: audio.rs  lib.rs  main.rs  slide_loader.rs  trace.rs
src/app/: loading_shader.wgsl  mod.rs
src/assets/: archive.rs
src/gpu/: context.rs  mod.rs
src/render/: mod.rs  overlay.rs  shader_contract.rs  slide.rs  transition.rs
src/server/: mod.rs  routes.rs  secrets.rs  state.rs
src/slide/: instance.rs  mod.rs  wire.rs
src/ui/: management.html
src/ui/management/: ManagementApp.tsx  legacy.ts
src/utils/: clock.rs
src/wasm/: runtime.rs
tests/: audio_integration.rs  e2e_animation.rs  e2e_audio_pack.rs  proof_animation.rs
