[package]
name = "VRX-64-native"
version = "0.1.0"
edition = "2024"
description = "Native host for VZGLYD display engine (Linux/Raspberry Pi)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vzglyd/VRX-64-native"
rust-version = "1.85"

[[bin]]
name = "vzglyd"
path = "src/main.rs"

[lib]
name = "vzglyd_native"
path = "src/lib.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true       # Strip symbols to reduce binary size

[profile.dev]
debug = 0
incremental = false

[dependencies]
# Kernel crates
vzglyd_kernel = { package = "VRX-64-kernel", git = "https://github.com/vzglyd/VRX-64-kernel", branch = "main" }
vzglyd_slide = { package = "VRX-64-slide", git = "https://github.com/vzglyd/VRX-64-slide", branch = "main", features = ["gpu"] }
vzglyd_sidecar = { package = "VRX-64-sidecar", git = "https://github.com/vzglyd/VRX-64-sidecar", branch = "main" }

# Windowing
winit = "0.30"

# GPU
wgpu = "23"
naga = { version = "23.1.0", features = ["wgsl-in"] }

# WASM Runtime
wasmtime = "16"
wasmtime-wasi = "16"

# Math & Serialization
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc", "use-std"] }

# Image & Archive
image = { version = "0.25", default-features = false, features = ["png"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
gltf = { version = "1", default-features = false, features = ["KHR_lights_punctual", "extras", "names", "utils"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Audio playback
rodio = { version = "0.19", default-features = false, features = ["mp3", "wav", "vorbis", "flac"] }

# Error handling
thiserror = "1.0"

# Utilities
once_cell = "1"
pollster = "0.3"
signal-hook = "0.3"

chrono = "0.4"

# Management HTTP server
axum = { version = "0.7", default-features = false, features = ["http1", "json", "multipart", "tokio"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "io-util", "sync", "time", "fs", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
drm = "0.15"

[build-dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
wat = "1"
